FIX: mobile alignments

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -89,7 +89,8 @@
     @media (max-width: 767px) {
       .home-wrapper .section1-oval {
         position: static;
-        margin-top: 8px; } }
+        margin-top: 8px;
+        width: 80%; } }
     .home-wrapper .section1-oval-text {
       font-family: "Nunito Extra Light", "Open Sans";
       font-size: 16px; }
@@ -141,11 +142,18 @@
       letter-spacing: 0.2px;
       color: #1c1c1c;
       z-index: 1; }
+      @media (max-width: 767px) {
+        .home-wrapper .section3-top-block-title {
+          left: 6px; } }
     .home-wrapper .section3-top-block-title-big {
       font-family: "Gobold Regular", "Open Sans";
       font-size: 90px;
       line-height: 102px;
       color: #f4f4f4; }
+      @media (max-width: 767px) {
+        .home-wrapper .section3-top-block-title-big {
+          font-size: 70px;
+          line-height: 76px; } }
   .home-wrapper .section3-flex {
     display: flex;
     margin-top: 32px;
@@ -189,11 +197,18 @@
       letter-spacing: 0.2px;
       color: #1c1c1c;
       z-index: 1; }
+      @media (max-width: 767px) {
+        .home-wrapper .section4-top-block-title {
+          left: 3px; } }
     .home-wrapper .section4-top-block-title-big {
       font-family: "Gobold Regular", "Open Sans";
       font-size: 90px;
       line-height: 99px;
       color: #f4f4f4; }
+      @media (max-width: 767px) {
+        .home-wrapper .section4-top-block-title-big {
+          font-size: 70px;
+          line-height: 76px; } }
   .home-wrapper .section4-content {
     display: flex;
     justify-content: center;
@@ -437,6 +452,9 @@
       font-size: 90px;
       line-height: 99px;
       color: #f4f4f4; }
+      @media (max-width: 767px) {
+        .home-wrapper .instagram-top-block-title-big {
+          font-size: 70px; } }
   .home-wrapper .instagram .carousel-wrapper {
     position: relative; }
     .home-wrapper .instagram .carousel-wrapper .controls-prev-icon,
@@ -521,11 +539,20 @@
   padding-top: 60px;
   padding-bottom: 60px;
   color: white; }
+  @media (max-width: 767px) {
+    .resume-wrapper .section1 {
+      flex-direction: column;
+      padding-top: 30px;
+      padding-bottom: 30px; } }
   .resume-wrapper .section1-button {
     margin-left: 75px;
     display: flex;
     align-items: center;
     justify-content: center; }
+    @media (max-width: 767px) {
+      .resume-wrapper .section1-button {
+        margin-left: 0;
+        margin-top: 30px; } }
     .resume-wrapper .section1-button-container {
       border: 1px solid white;
       height: 62px;
@@ -556,6 +583,9 @@
 .resume-wrapper .section2 {
   padding-top: 60px;
   padding-bottom: 60px; }
+  @media (max-width: 767px) {
+    .resume-wrapper .section2 {
+      padding-bottom: 20px; } }
   .resume-wrapper .section2 p {
     font-family: "Nunito Extra Light", "Open Sans";
     font-size: 16px;
@@ -570,14 +600,26 @@
     display: flex;
     align-items: flex-start;
     justify-content: center; }
+    @media (max-width: 767px) {
+      .resume-wrapper .section2-info {
+        flex-direction: column; } }
     .resume-wrapper .section2-info-block {
       flex: 1; }
+      @media (max-width: 767px) {
+        .resume-wrapper .section2-info-block {
+          margin-bottom: 32px; } }
     .resume-wrapper .section2-info-block:not(:first-child) {
       margin-left: 5%; }
+      @media (max-width: 767px) {
+        .resume-wrapper .section2-info-block:not(:first-child) {
+          margin-left: 0; } }
   .resume-wrapper .section2-info:first-child div:first-child {
     flex: 1.3; }
   .resume-wrapper .section2 .title-top-margin {
     margin-top: 70px; }
+    @media (max-width: 767px) {
+      .resume-wrapper .section2 .title-top-margin {
+        margin-top: 40px; } }
   .resume-wrapper .section2 .second-title {
     margin-bottom: 3px; }
 
